cn/docs/user-guide/bad-nginx-deployment.yaml
apiVersion: apps/v1beta1 # the version value can be different depending upon Kubernetes release
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.91
        ports:
        - containerPort: 80
