cn/docs/user-guide/ingress.yaml
apiVersion: extensions/v1beta1 # the version value can be different depending upon Kubernetes release
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: testsvc
    servicePort: 80
